# EasonDrone_Gazebo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  package.xml
config/: easondrone.rviz  px4_config.yaml  px4_config_indoor.yaml  sensor_tf_offset.yaml  simulation.rviz  uav_control_indoor.yaml
config/mavros_config/: px4_config.yaml
doc/log/2024-03-26/: DebugRecord.md
gazebo_models/scene_models/cylinder_big/: model.config  model.sdf
gazebo_models/scene_models/cylinder_middle/: model.config  model.sdf
gazebo_models/scene_models/cylinder_small/: model.config  model.sdf
gazebo_models/scene_models/landing_H/: landing_H.sdf
gazebo_models/scene_models/landmark/: model.config
gazebo_models/scene_models/obs_cylinder_large/: model.config  obs_cylinder_large.sdf
gazebo_models/scene_models/round_bucket_big/: model.config  untitled.blend  untitled.stl
gazebo_models/scene_models/round_bucket_mid/: model.sdf  untitled.blend  untitled.dae  untitled.stl
gazebo_models/scene_models/round_bucket_slit/: untitled.blend  untitled.dae  untitled.stl
gazebo_models/sensor_models/3Dlidar/: 3Dlidar.sdf
gazebo_models/sensor_models/D435i/: model.sdf
gazebo_models/sensor_models/VLP16/: VLP16.sdf  model.config
gazebo_models/sensor_models/livox_mid360/: livox_mid360.sdf  model.config
gazebo_models/sensor_models/monocular/: monocular.sdf
gazebo_models/sensor_models/rplidar_s1/: rplidar_s1.sdf
launch/: Eason_indoor.launch  Eason_obstacle.launch  GFKD.launch  cafe_indoor.launch  cuadc_world.launch  empty_world.launch  mavros_posix_sitl.launch  multi_uav_mavros_sitl.launch  posix_sitl.launch  simu_iris.launch  simu_p450.launch  simulation.launch  single_vehicle_spawn.launch  sitl_iris_realsense_livox.launch  sitl_p450.launch  sitl_p450_3Dlidar_D435i.launch  transform.launch
launch/launch_basic/: sitl.launch  sitl_px4_outdoor.launch
launch/launch_slam/: sitl_rtabmap.launch
launch/launch_uav_with_sensor/: sitl_p450_3dlidar.launch  sitl_p450_d435i.launch
log/2024-03-25/: frames.dot
src/: qrcode_control.cpp
world/indoor/: CUADC.world  Eason_indoor.world  Eason_obstacle.world  GFKD_empty.world
worlds/competition/: cuadc.world  cuadc2024.world
worlds/indoor/: cafe_indoor.world
worlds/outdoor/: cuadc.world
(+36 files in other folders)
