<?xml version="1.0"?>
<package format="2">
  <name>easondrone_gazebo</name>
  <version>1.1.4</version>
  <description>
    The easondrone_gazebo package
  </description>

  <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/HuaYuXiao/easondrone_gazebo.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
